--- a/eslint-config-nuxt/package.json
+++ b/eslint-config-nuxt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sagacorp/eslint-config-nuxt",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "ESlint config presets",
   "main": "index.js",
   "files": [
@@ -24,8 +24,9 @@
   },
   "dependencies": {
     "@nuxtjs/eslint-config": "^10.0.0",
-    "@sagacorp/eslint-config-base": "^1.0.0",
-    "eslint-plugin-nuxt": "^3.2.0"
+    "@sagacorp/eslint-config-base": "^1.1.0",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-tailwindcss": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^8.0.1",
