--- a/eslint-config-vite/package.json
+++ b/eslint-config-vite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sagacorp/eslint-config-vite",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "ESlint config presets",
   "main": "index.js",
   "files": [
@@ -23,7 +23,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@sagacorp/eslint-config-base": "^1.0.0"
+    "@sagacorp/eslint-config-base": "^1.1.0",
+    "eslint-plugin-tailwindcss": "^3.6.0"
   },
   "devDependencies": {
     "eslint": "^8.0.1",
