--- a/eslint-config-vue/package.json
+++ b/eslint-config-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sagacorp/eslint-config-nuxt",
+  "name": "@sagacorp/eslint-config-vue",
   "version": "2.0.0",
   "description": "ESlint config presets",
   "main": "index.js",
@@ -23,9 +23,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@nuxtjs/eslint-config": "^12.0.0",
     "@sagacorp/eslint-config-base": "^2.0.0",
-    "eslint-plugin-nuxt": "^4.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/eslint-config-typescript": "^11.0.0"
   },
   "devDependencies": {
     "eslint": "^8.0.1",
